--- a/pom.xml
+++ b/pom.xml
@@ -20,11 +20,10 @@
         <version>3.6.1</version>
     </dependency>
 
-
     <dependency>
         <groupId>org.testng</groupId>
         <artifactId>testng</artifactId>
-        <version></version>
+        <version>6.14.3</version>
     </dependency>
 
     <dependency>
